<resources>
    <string name="app_name">BookPrice</string>
    <string name="action_settings">Settings</string>
    <string name="image_details_header">Details:</string>
    <string name="image_preview_header">Preview:</string>
    <string name="loading_message">Uploading image. Please wait.</string>

    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>
    <string name="condition1">조건1-얼룩짐 및 낙서</string>
    <string name="condition2">조건2-훼손도(찢어짐 등)</string>
    <string name="condition3">조건3-구입시기</string>
    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>

    <string name="rcon1">얼룩짐 및 낙서</string>
    <string name="rcon2">훼손도</string>
    <string name="rcon3">구입시기</string>

    <string name="rtitle">중고책 거래가 측정결과</string>

    <string name="conA">매우심함</string>
    <string name="conB">보통</string>
    <string name="conC">매우깔끔</string>

    <string name="pconA">10년 이내</string>
    <string name="pconB">5년 이내</string>
    <string name="pconC">1년 이내</string>
</resources>
